--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>AngularioHBuilder</title>
-  <base href="/">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>document.write('<base href="' + document.location + '" />');</script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root> loading</app-root>
 </body>
 </html>
